add new and create actions fith forms for questions

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,4 +6,6 @@
     <%= question.formatted_created_at %>
   </time>
   <p><%= question.body %></p>
+  <br>
+  <%= link_to 'Edit', edit_question_path(question.id) %>
 <% end %>
