--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>New question</h1>
+<h1>Edit question</h1>
 
 <%= form_with model: @question do |f| %>
   <div>
@@ -11,5 +11,5 @@
     <%= f.text_area :body, required: true, minlength: 2, placeholder: "Body" %>
   </div>
 
-  <%= f.submit "Create" %>
+  <%= f.submit "Update" %>
 <% end %>
