--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,5 +7,9 @@
   </time>
   <p><%= question.body %></p>
   <br>
-  <%= link_to 'Edit', edit_question_path(question.id) %>
+  <%= link_to 'Show', question_path(question) %>
+  <%= link_to 'Edit', edit_question_path(question) %>
+  <%= link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure?" } %>
 <% end %>
+
+<p><%= link_to 'New question', new_question_path %></p>
