--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,8 +2,8 @@
 
 <% @questions.each do |question| %>
   <h2><%= question.title %></h2>
-  <time datetime="<%= question.formatted_created_at %>">
-    <%= question.formatted_created_at %>
+  <time datetime="<%= format_created_at(question.created_at) %>">
+    <%= format_created_at(question.created_at) %>
   </time>
   <p><%= question.body %></p>
   <br>
