--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,6 +6,21 @@
 </time>
 <p><%= @question.body %></p>
 
-<%= link_to 'All questions', questions_path %>
 <%= link_to 'Edit', edit_question_path(@question) %>
 <%= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: "Are you sure?" } %>
+
+<h2>Answers</h2>
+<% @answers.each do |answer| %>
+  <time datetime="<%= format_timestamp(answer.created_at) %>">
+    <%= format_timestamp(answer.created_at) %>
+  </time>
+  <p><%= answer.body %></p>
+<% end %>
+
+<%= form_with model: @answer, url: question_answers_path(@question) do |f| %>
+  <div>
+    <%= f.text_area :body, required: true, placeholder: "Type an answer..." %>
+  </div>
+
+  <%= f.submit "Enter" %>
+<% end %>
