--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,8 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'Questions', questions_path %></li>
-      </ul>
-    </nav>
+    <%= render 'layouts/navigation' %>
+    <%= render 'layouts/messages' %>
 
     <main>
       <%= yield %>
