--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,9 +15,16 @@
     <%= format_timestamp(answer.created_at) %>
   </time>
   <p><%= answer.body %></p>
+  <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, data: { confirm: "Are you sure?" } %>
+
+  <%# displaying results of search with javascript (see _s.js.erb) %>
+  <div id="answer_form">
+
+  </div>
 <% end %>
 
-<%= form_with model: @answer, url: question_answers_path(@question) do |f| %>
+
+<%= form_with model: [@question, @answer] do |f| %>
   <div>
     <%= f.text_area :body, required: true, placeholder: "Type an answer..." %>
   </div>
