--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,19 +15,13 @@
     <%= format_timestamp(answer.created_at) %>
   </time>
   <p><%= answer.body %></p>
+  <%= link_to 'Edit', edit_question_answer_path(@question, answer), remote: true %>
   <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, data: { confirm: "Are you sure?" } %>
 
-  <%# displaying results of search with javascript (see _s.js.erb) %>
-  <div id="answer_form">
+  <%# displaying editing form for answer with ajax (see _answer_form.js.erb) %>
+  <div id="answer_form_<%= answer.id %>">
 
   </div>
 <% end %>
 
-
-<%= form_with model: [@question, @answer] do |f| %>
-  <div>
-    <%= f.text_area :body, required: true, placeholder: "Type an answer..." %>
-  </div>
-
-  <%= f.submit "Enter" %>
-<% end %>
+<%= render 'answer_form' %>
