--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
 
-    <main>
+    <div class="container">
       <%= yield %>
-    </main>
+    </div>
   </body>
 </html>
