--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,13 +1,12 @@
 <%= form_with model: @question do |f| %>
-  <div>
-    <%= f.label :title %>
-    <%= f.text_field :title, required: true, minlength: 2, placeholder: "Title" %>
+  <div class="mb-3">
+    <%= f.label :title, class:"form-label" %>
+    <%= f.text_field :title, required: true, minlength: 2, placeholder: "Title", class:"form-control" %>
   </div>
-  
-  <div>
-    <%= f.label :body %>
-    <%= f.text_area :body, required: true, minlength: 2, placeholder: "Body" %>
+  <div class="mb-3">
+    <%= f.label :body, class:"form-label" %>
+    <%= f.text_area :body, required: true, minlength: 2, placeholder: "Body", class:"form-control" %>
   </div>
 
-  <%= f.submit @question.new_record? ? "Create" : "Update" %>
+  <%= f.submit @question.new_record? ? "Create" : "Update", class:"btn btn-outline-primary" %>
 <% end %>
