add styling for question show pageand answers

--- a/app/views/questions/_answer_form.html.erb
+++ b/app/views/questions/_answer_form.html.erb
@@ -1,7 +1,6 @@
 <%= form_with model: [@question, @answer] do |f| %>
-  <div>
-    <%= f.text_area :body, required: true, placeholder: "Type an answer..." %>
+  <div class="input-group mb-3">
+    <%= f.text_area :body, required: true, placeholder: "Type an answer...", class:"form-control" %>
+    <%= f.submit @answer.new_record? ? "Enter" : "Update", class:"btn btn-outline-primary" %>
   </div>
-
-  <%= f.submit @answer.new_record? ? "Enter" : "Update" %>
 <% end %>
