--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,22 +1,39 @@
 <h1>Question info</h1>
 
-<h2><%= @question.title %></h2>
-<time datetime="<%= format_timestamp(@question.created_at) %>">
-  <%= format_timestamp(@question.created_at) %>
-</time>
-<p><%= @question.body %></p>
+<div class="py-3">
+  <div class="card">
+    <div class="card-header">
+      <time datetime="<%= format_timestamp(@question.created_at) %>">
+        <%= format_timestamp(@question.created_at) %>
+      </time>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title"><%= @question.title %></h5>
+      <p class="card-text"><%= @question.body %></p>
+      <%= link_to 'Edit', edit_question_path(@question), class:"btn btn-outline-primary" %>
+      <%= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %>
+    </div>
+    <div class="card-footer text-muted">
+      2 days ago
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Edit', edit_question_path(@question) %>
-<%= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: "Are you sure?" } %>
+<h2 class="py-3">Answers</h2>
 
-<h2>Answers</h2>
 <% @answers.each do |answer| %>
-  <time datetime="<%= format_timestamp(answer.created_at) %>">
-    <%= format_timestamp(answer.created_at) %>
-  </time>
-  <p><%= answer.body %></p>
-  <%= link_to 'Edit', edit_question_answer_path(@question, answer), remote: true %>
-  <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, data: { confirm: "Are you sure?" } %>
+  <div class="card mb-3">
+    <div class="card-body">
+      <h5 class="card-title">Username</h5>
+      <p class="card-text"><%= answer.body %></p>
+      <p class="card-text"><small class="text-muted"><%= format_timestamp(answer.created_at) %></small></p>
+
+      <%= link_to 'Edit', edit_question_answer_path(@question, answer), 
+                          remote: true, class:"btn btn-outline-primary btn-sm" %>
+      <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, 
+                            data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
+    </div>
+  </div>
 
   <%# displaying editing form for answer with ajax (see _answer_form.js.erb) %>
   <div id="answer_form_<%= answer.id %>">
