--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,21 @@
-<% flash.each do |name, msg| %>
-  <%= msg %>
+<% unless flash.empty? %>
+  <div class="row justify-content-md-center ps-3">
+    <% flash.each do |name, msg| %>
+      <% if name == "notice" %>
+        <div class="alert alert-success alert-dismissible" role="alert">
+          <%= notice %>
+          <%# close message button %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+          </button>
+        </div>
+      <% else %>
+        <div class="alert alert-danger alert-dismissible" role="alert">
+          <%= alert %>
+          <%# close message button %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+          </button> 
+        </div>
+      <% end %>
+    <% end %>
+  </div>
 <% end %>
