--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
 
   <body>
     <%= render 'layouts/navigation' %>
-    <%= render 'layouts/messages' %>
-
-    <div class="container">
+    <div class="container pt-2">
+      <%= render 'layouts/messages' %>
+    
       <%= yield %>
     </div>
   </body>
