--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -22,12 +22,14 @@
 <h2 class="py-3">Answers</h2>
 
 <% @answers.each do |answer| %>
-  <div class="card mb-3">
+  <div class="card mt-3">
     <div class="card-body">
       <h5 class="card-title">Username</h5>
       <p class="card-text"><%= answer.body %></p>
       <p class="card-text"><small class="text-muted"><%= format_timestamp(answer.created_at) %></small></p>
 
+      <%= link_to 'Reply', edit_question_answer_path(@question, answer), 
+                          remote: true, class:"btn btn-outline-primary btn-sm" %>
       <%= link_to 'Edit', edit_question_answer_path(@question, answer), 
                           remote: true, class:"btn btn-outline-primary btn-sm" %>
       <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, 
@@ -40,12 +42,36 @@
 
   </div>
 
-  <% answer.comments.each do |comment| %>
-    <time datetime="<%= format_timestamp(comment.created_at) %>">
-      <%= format_timestamp(answer.created_at) %>
-    </time>
-    <p><%= comment.body %></p>
-  <% end %>
+  <%# displaying comment for answers %>
+  <div class="row">
+    <div class="col-1">
+    </div>
+    <div class="col-11">
+      <% answer.comments.each do |comment| %>
+        <div class="card mt-2">
+          <div class="card-body">
+            <h6 class="card-title">Username</h6>
+            <p class="card-text"><%= comment.body %></p>
+            <p class="card-text"><small class="text-muted"><%= format_timestamp(comment.created_at) %></small></p>
+
+            <%= link_to 'Reply', edit_question_comment_path(@question, comment), 
+                                remote: true, class:"btn btn-outline-primary btn-sm" %>
+            <%= link_to 'Edit', edit_question_comment_path(@question, comment), 
+                                remote: true, class:"btn btn-outline-primary btn-sm" %>
+            <%= link_to 'Delete', question_comment_path(@question, comment), method: :delete, 
+                                  data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
+          </div>
+        </div>
+      
+        <%# displaying editing or replying form for comment with ajax (see _comment_form.js.erb) %>
+        <div id="comment_form_<%= comment.id %>">
+
+        </div>
+      <% end %> 
+    </div>
+  </div>
+  
 <% end %>
+
 
 <%= render 'answer_form' %>
