add leaving comments for answers

--- a/app/views/questions/_comment_form.html.erb
+++ b/app/views/questions/_comment_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_with model: [@question, @comment] do |f| %>
   <div class="input-group my-3">
-    <%= f.text_area :body, required: true, placeholder: "Type a comment...", class:"form-control" %>
+    <%= hidden_field_tag(:answer_id, answer_id) %>
+    <%= f.text_field :body, required: true, placeholder: "Type a comment...", class:"form-control" %>
     <%= f.submit @comment.new_record? ? "Enter" : "Update", class:"btn btn-outline-primary" %>
   </div>
 <% end %>
