add pagination to questions and answers using pagy gem

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -23,52 +23,57 @@
 
 <h2 class="py-3">Answers</h2>
 
-<% @answers.each do |answer| %>
-  <div class="card mt-3">
-    <div class="card-body">
-      <h5 class="card-title">Username</h5>
-      <p class="card-text"><%= answer.body %></p>
-      <p class="card-text"><small class="text-muted"><%= format_timestamp(answer.created_at) %></small></p>
 
-      <%= link_to 'Edit', edit_question_answer_path(@question, answer), 
-                          remote: true, class:"btn btn-outline-primary btn-sm" %>
-      <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, 
-                            data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
-      
-      <%# displaying editing form for answer with ajax (see _answer_form.js.erb) %>
-      <div id="answer_form_<%= answer.id %>">
+<%== pagy_bootstrap_nav @pagy %>
 
+  <% @answers.each do |answer| %>
+    <div class="card mt-3">
+      <div class="card-body">
+        <h5 class="card-title">Username</h5>
+        <p class="card-text"><%= answer.body %></p>
+        <p class="card-text"><small class="text-muted"><%= format_timestamp(answer.created_at) %></small></p>
+
+        <%= link_to 'Edit', edit_question_answer_path(@question, answer, page: @page),
+                            remote: true, class:"btn btn-outline-primary btn-sm" %>
+        <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, 
+                              data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
+        
+        <%# displaying editing form for answer with ajax (see _answer_form.js.erb) %>
+        <div id="answer_form_<%= answer.id %>">
+
+        </div>
       </div>
     </div>
-  </div>
 
 
-  <%# displaying comment for answers %>
-  <div class="row">
-    <div class="col-1">
-    </div>
-    <div class="col-11">
-      <% answer.comments.each do |comment| %>
-        <div class="card mt-2">
-          <div class="card-body">
-            <h6 class="card-title">Username</h6>
-            <p class="card-text"><%= comment.body %></p>
-            <p class="card-text"><small class="text-muted"><%= format_timestamp(comment.created_at) %></small></p>
+    <%# displaying comment for answers %>
+    <div class="row">
+      <div class="col-1">
+      </div>
+      <div class="col-11">
+        <% answer.comments.each do |comment| %>
+          <div class="card mt-2">
+            <div class="card-body">
+              <h6 class="card-title">Username</h6>
+              <p class="card-text"><%= comment.body %></p>
+              <p class="card-text"><small class="text-muted"><%= format_timestamp(comment.created_at) %></small></p>
 
-            <%= link_to 'Edit', edit_question_comment_path(@question, comment), 
-                                remote: true, class:"btn btn-outline-primary btn-sm" %>
-            <%= link_to 'Delete', question_comment_path(@question, comment), method: :delete, 
-                                  data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
-          
-            <%# displaying editing or replying form for comment with ajax (see _comment_form.js.erb) %>
-            <div id="comment_form_<%= comment.id %>">
+              <%= link_to 'Edit', edit_question_comment_path(@question, comment), 
+                                  remote: true, class:"btn btn-outline-primary btn-sm" %>
+              <%= link_to 'Delete', question_comment_path(@question, comment), method: :delete, 
+                                    data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
+            
+              <%# displaying editing or replying form for comment with ajax (see _comment_form.js.erb) %>
+              <div id="comment_form_<%= comment.id %>">
 
+              </div>
             </div>
           </div>
-        </div>
-      <% end %> 
+        <% end %> 
 
-      <%= render 'comment_form', answer_id: answer.id %>
+        <%= render 'comment_form', answer_id: answer.id %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+
+<%== pagy_bootstrap_nav @pagy %>
