--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,8 +16,13 @@
 
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <% if logged_in? %>
-          <li class="nav-item">
-            <%= link_to 'Sign out', session_path, method: :delete, class:"nav-link" %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= current_user.username %>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Sign out', session_path, method: :delete, class:"nav-link" %></li>
+            </ul>
           </li>
         <% else %>
           <li class="nav-item">
