--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,9 +3,7 @@
 <div class="py-3">
   <div class="card">
     <div class="card-header">
-      <time datetime="<%= format_timestamp(@question.created_at) %>">
-        <%= format_timestamp(@question.created_at) %>
-      </time>
+      <%= @question.user.username %>
     </div>
     <div class="card-body">
       <h5 class="card-title"><%= @question.title %></h5>
@@ -14,7 +12,7 @@
       <%= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %>
     </div>
     <div class="card-footer text-muted">
-      2 days ago
+      <%= format_timestamp(@question.created_at) %>
     </div>
   </div>
 </div>
@@ -28,7 +26,7 @@
 <% @answers.each do |answer| %>
   <div class="card mt-3" id="<%= dom_id(answer) %>">
     <div class="card-body">
-      <h5 class="card-title">Username</h5>
+      <h5 class="card-title"><%= answer.user.username %></h5>
       <p class="card-text"><%= answer.body %></p>
       <p class="card-text"><small class="text-muted"><%= format_timestamp(answer.created_at) %></small></p>
 
@@ -53,7 +51,7 @@
       <% answer.comments.each do |comment| %>
         <div class="card mt-2" id="<%= dom_id(comment) %>">
           <div class="card-body">
-            <h6 class="card-title">Username</h6>
+            <h6 class="card-title"><%= comment.user.username %></h6>
             <p class="card-text"><%= comment.body %></p>
             <p class="card-text"><small class="text-muted"><%= format_timestamp(comment.created_at) %></small></p>
 
