--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,9 +9,11 @@
         <li class="nav-item">
           <%= link_to 'Home', root_path, class:"nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to 'Questions', questions_path, class:"nav-link" %>
-        </li>
+        <% if logged_in? %>
+          <li class="nav-item">
+            <%= link_to 'Questions', questions_path, class:"nav-link" %>
+          </li>
+        <% end %>
       </ul>
 
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
