--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -13,6 +13,7 @@
     </div>
     <div class="card-footer text-muted">
       <%= format_timestamp(@question.created_at) %>
+      <%= render 'vote' %>
     </div>
   </div>
 </div>
