--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -14,8 +14,10 @@
         <h5 class="card-title"><%= question.title %></h5>
         <p class="card-text"><%= question.body %></p>
         <%= link_to 'Show', question_path(question), class:"btn btn-outline-primary" %>
-        <%= link_to 'Edit', edit_question_path(question), class:"btn btn-outline-primary" %>
-        <%= link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %>
+        <% if owner?(question) %>
+          <%= link_to 'Edit', edit_question_path(question), class:"btn btn-outline-primary" %>
+          <%= link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %>
+        <% end %>
       </div>
       <div class="card-footer text-muted">
         <%= format_timestamp(question.created_at) %>
