--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -9,8 +9,10 @@
     <div class="card-body">
       <h5 class="card-title"><%= @question.title %></h5>
       <p class="card-text"><%= @question.body %></p>
-      <%= link_to 'Edit', edit_question_path(@question), class:"btn btn-outline-primary" %>
-      <%= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %>
+      <% if owner?(@question) %>
+        <%= link_to 'Edit', edit_question_path(@question), class:"btn btn-outline-primary" %>
+        <%= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %>
+      <% end %>
     </div>
 
     <div class="card-footer text-muted">
@@ -41,11 +43,13 @@
       <h5 class="card-title"><%= answer.user.username %></h5>
       <p class="card-text"><%= answer.body %></p>
 
-      <%= link_to 'Edit', edit_question_answer_path(@question, answer, page: @page),
-                          remote: true, class:"btn btn-outline-primary btn-sm" %>
-      <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, 
-                            data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
-      
+      <% if owner?(answer) %>
+        <%= link_to 'Edit', edit_question_answer_path(@question, answer, page: @page),
+                            remote: true, class:"btn btn-outline-primary btn-sm" %>
+        <%= link_to 'Delete', question_answer_path(@question, answer), method: :delete, 
+                              data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
+      <% end %>
+
       <p class="card-text mt-3"><small class="text-muted"><%= format_timestamp(answer.created_at) %></small></p>
       
       <div class="py-2"> 
@@ -80,11 +84,13 @@
             <p class="card-text"><%= comment.body %></p>
             <p class="card-text"><small class="text-muted"><%= format_timestamp(comment.created_at) %></small></p>
 
-            <%= link_to 'Edit', edit_question_comment_path(@question, comment), 
-                                remote: true, class:"btn btn-outline-primary btn-sm" %>
-            <%= link_to 'Delete', question_comment_path(@question, comment), method: :delete, 
-                                  data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
-          
+            <% if owner?(comment) %>
+              <%= link_to 'Edit', edit_question_comment_path(@question, comment), 
+                                  remote: true, class:"btn btn-outline-primary btn-sm" %>
+              <%= link_to 'Delete', question_comment_path(@question, comment), method: :delete, 
+                                    data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger btn-sm" %>
+            <% end %>
+
             <%# displaying editing or replying form for comment with ajax (see _comment_form.js.erb) %>
             <div id="comment_form_<%= comment.id %>">
 
