--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,6 +13,9 @@
           <li class="nav-item">
             <%= link_to 'Questions', questions_path, class:"nav-link" %>
           </li>
+          <li class="nav-item">
+            <%= link_to 'Categories', categories_path, class:"nav-link" %>
+          </li>
         <% end %>
       </ul>
 
