--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,1 +1,1 @@
-<%= link_to category.name, category_path(category), class: "badge badge-pill text-bg-info text-decoration-none" %>
+<%= link_to category.name, category_path(category), class: "badge rounded-pill text-bg-info text-decoration-none" %>
