--- a/app/views/notificate_subscribers_mailer/notificate_subscriber.html.erb
+++ b/app/views/notificate_subscribers_mailer/notificate_subscriber.html.erb
@@ -1,1 +1,5 @@
-SAMPLE HTML
+<h4>Hi, <%= @user.username %>, it's the admin of AskIt and we have something interesting for you!<h4>
+ 
+<p>There are more new questions in the <%= @category.name %> category!</p>
+<p>Check our site for them!</p>
+ <p>Thanks for staying with us and have a great day!</p>
