--- a/app/views/notificate_subscribers_mailer/notificate_subscriber.text.erb
+++ b/app/views/notificate_subscribers_mailer/notificate_subscriber.text.erb
@@ -1,1 +1,8 @@
-SAMPLE TEXT
+Hi, <%= @user.username %>, it's the admin of AskIt 
+and we have something interesting for you!
+===============================================
+ 
+There are more new questions in the <%= @category.name %> category!
+Check our site for them!
+ 
+Thanks for staying with us and have a great day!
