--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -46,9 +46,6 @@
       <h5 class="card-title"><%= answer.user.username %></h5>
       <p class="card-text"><%= answer.body %></p>
 
-      <%# <%= link_to 'Reply', question_path(@question, anchor: dom_id(answer, :new_comment)), %>
-                          <%# #  class:"btn btn-outline-primary btn-sm" %>
-
       <%= link_to 'Reply', new_question_comment_path(@question, answer_id: answer),
                            remote: true, class:"btn btn-outline-primary btn-sm" %>
       <% if owner?(answer) %>
@@ -92,6 +89,8 @@
             <p class="card-text"><%= comment.body %></p>
             <p class="card-text"><small class="text-muted"><%= format_timestamp(comment.created_at) %></small></p>
 
+            <%= link_to 'Reply', new_question_comment_path(@question, answer_id: answer),
+                                 remote: true, class:"btn btn-outline-primary btn-sm" %>
             <% if owner?(comment) %>
               <%= link_to 'Edit', edit_question_comment_path(@question, comment), 
                                   remote: true, class:"btn btn-outline-primary btn-sm" %>
@@ -106,8 +105,6 @@
           </div>
         </div>
       <% end %> 
-
-      <%# <%= render 'reply_form', { reply: @comment, answer: answer } %>
 
       <div id="new_reply_form_<%= answer.id %>">
 
