--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,7 @@
   <div class="pt-4">
     <%= link_to "Edit category", edit_category_path(@category), class:"btn btn-outline-primary" %>
     <% if already_subscribed?(@category) %>
-      <%= link_to 'Unsubscribe', category_subscription_path(@category), method: :delete, 
+      <%= link_to 'Unsubscribe', category_subscription_path(@category, @subscription), method: :delete, 
                               class: "btn btn-danger" %>
     <% else %>
       <%= link_to 'Subscribe', category_subscriptions_path(@category), method: :post, 
