--- a/app/views/notify_subscribers_mailer/notify_subscriber.html.erb
+++ b/app/views/notify_subscribers_mailer/notify_subscriber.html.erb
@@ -1,5 +1,10 @@
 <h4>Hi, <%= @user.username %>, it's the admin of AskIt and we have something interesting for you!<h4>
  
-<p>There are more new questions in the <%= @category.name %> category!</p>
-<p>Check our site for them!</p>
- <p>Thanks for staying with us and have a great day!</p>
+<p>There is a new questions in the <%= @category.name %> category!</p>
+<p>Check it out:</p>
+<p><%= link_to nil, question_url(@question) %></p>
+
+<p>Check new questions in the category <%= @category.name %>:</p>
+<p><%= link_to nil, category_url(@category) %></p>
+
+<p>Thanks for staying with us and have a great day!</p>
