--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to 'Home', root_path, class:"nav-link" %>
+          <%= link_to t('navbar.home'), root_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Questions', questions_path, class:"nav-link" %>
+          <%= link_to t('navbar.questions'), questions_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Categories', categories_path, class:"nav-link" %>
+          <%= link_to t('navbar.categories'), categories_path, class:"nav-link" %>
         </li>
       </ul>
 
@@ -24,15 +24,15 @@
               <%= current_user.username %>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'Sign out', session_path, method: :delete, class:"nav-link" %></li>
+              <li><%= link_to t('navbar.sign_out'), session_path, method: :delete, class:"nav-link" %></li>
             </ul>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to 'Sign in', new_session_path, class:"nav-link" %>
+            <%= link_to t('navbar.sign_in'), new_session_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Sign up', new_user_path, class:"nav-link" %>
+            <%= link_to t('navbar.sign_up'), new_user_path, class:"nav-link" %>
           </li>
         <% end %>
       </ul>
