--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,26 @@
 @import 'bootstrap/dist/css/bootstrap';
+
+.flag {
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  background: url('flags.png') no-repeat;
+  overflow: hidden;
+  text-indent: -9999px;
+  text-align: left;
+}
+
+.ru-flag {
+  background-position: -1px -0px;
+
+}
+.en-flag {
+  background-position: -1px -17px;
+}
+
+.nav-item {
+  .flag {
+    position: relative;
+    top: 2px;
+  }
+}
