--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @category, local: true) do |f| %>
   <div class="input-group my-3">
-    <%= f.text_field :name, class: "form-control", placeholder: "Category name" %>
+    <%= f.text_field :name, class: "form-control", placeholder: t('categories.new.name') %>
     <%= f.submit(@category.new_record? ? "Create" : "Update", class: "btn btn-outline-primary mr-2") %>
-    <%= link_to "Cancel", :back, class: "btn btn-outline-secondary" %>
+    <%= link_to t('categories.new.cancel'), :back, class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
