--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Edit category</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Delete Category', category_path(@category), method: :delete, class: "btn btn-outline-danger",
-data: { confirm: "Are you sure you want to delete this category?" } %>
+<%= link_to t('.delete'), category_path(@category), method: :delete, class: "btn btn-outline-danger",
+data: { confirm: "Are you sure?" } %>
