--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Categories</h1>
+<h1><%= t('.title') %></h1>
 
 <% if logged_in? %>
-  <%= link_to 'New category', new_category_path, class:"btn btn-outline-primary" %>
+  <%= link_to t('.new_category'), new_category_path, class:"btn btn-outline-primary" %>
 <% end %>
 
 <% @categories.each do |category| %>
@@ -9,9 +9,9 @@
     <div class="card text-center">
       <div class="card-body mt-2">
         <h5 class="card-title"><%= link_to category.name, category_path(category) %></h5>
-        <%= pluralize(category.questions.count, "question") %>
+        <%= pluralize(category.questions.count, t('.questions_count')) %>
         <% if already_subscribed?(category) %>
-          <br><span class="badge rounded-pill text-bg-secondary">Subscribed</span>
+          <br><span class="badge rounded-pill text-bg-secondary"><%= t('.subscribed') %></span>
         <% end %>
       </div>
     </div>
