--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container pt-2">
-  <h1>New category</h1>
+  <h1><%= t('.title') %></h1>
   <%= render 'shared/errors', obj: @category %>
   <%= render 'form'%>
 </div>
