--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,13 +1,13 @@
-<h1>Category: <%= @category.name %></h1>
+<h1><%= t('.title') %>: <%= @category.name %></h1>
 
 <% if logged_in? %>
   <div class="pt-4">
-    <%= link_to "Edit category", edit_category_path(@category), class:"btn btn-outline-primary" %>
+    <%= link_to t('.edit_category'), edit_category_path(@category), class:"btn btn-outline-primary" %>
     <% if already_subscribed?(@category) %>
-      <%= link_to 'Unsubscribe', category_subscription_path(@category, @subscription), method: :delete, 
+      <%= link_to t('.unsubscribe'), category_subscription_path(@category, @subscription), method: :delete, 
                               class: "btn btn-danger" %>
     <% else %>
-      <%= link_to 'Subscribe', category_subscriptions_path(@category), method: :post, 
+      <%= link_to t('.subscribe'), category_subscriptions_path(@category), method: :post, 
                               class: "btn btn-warning" %>
     <% end %>
   </div>
