--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,16 +1,15 @@
 <%= form_with model: @question do |f| %>
   <div class="mb-3">
-    <%= f.label :title, class:"form-label" %>
-    <%= f.text_field :title, required: true, minlength: 2, placeholder: "Title", class:"form-control" %>
+    <%= f.text_field :title, required: true, minlength: 2, placeholder: t('questions.new.question_title'),
+                     class:"form-control" %>
   </div>
   <div class="mb-3">
-    <%= f.label :body, class:"form-label" %>
-    <%= f.text_area :body, required: true, minlength: 2, placeholder: "Body", class:"form-control" %>
+    <%= f.text_area :body, required: true, minlength: 2, placeholder: t('questions.new.question_body'),
+                    class:"form-control" %>
   </div>
   <div class="mb-3">
-    <%= f.label :category_id, class:"form-label" %>
     <%= f.collection_select(:category_ids, Category.all, :id, :name, 
-                          options = { :prompt => "Choose categories from the listed below" },
+                          options = { :prompt => t('questions.new.categories_prompt') },
                           class: "form-select") %>
   </div>
 
