--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
-<h1 class="pb-3">Sign up</h1>
-
+<h1 class="pb-3"><%= t('.title') %></h1>
+<%= render 'shared/errors', obj: @user %>
 <%= render 'form' %>
