--- a/app/views/questions/_reply_form.html.erb
+++ b/app/views/questions/_reply_form.html.erb
@@ -3,24 +3,25 @@
     <% if reply.class == Answer %>
       <% if reply.new_record? %>
         <%= f.text_area :body, required: true, 
-                        placeholder: "Leave an answer...", class:"form-control" %>
+                        placeholder: t('questions.show.leave_answer'), class:"form-control" %>
       <% else %>
         <%= f.text_area :body, required: true, 
-                      placeholder: "Leave an answer...", class:"form-control", id: "edit_answer_area" %>
+                      placeholder: t('questions.show.leave_answer'), class:"form-control", id: "edit_answer_area" %>
       <% end %>
     <% end %>
 
       <% if reply.class == Comment %>
         <% if reply.new_record? %>
           <%= f.text_area :body, required: true, 
-                          placeholder: "Leave a comment...", class:"form-control", id: "new_comment_area" %> 
+                          placeholder: t('questions.show.leave_comment'), class:"form-control", id: "new_comment_area" %> 
         <% else %>
           <%= f.text_area :body, required: true, 
-                          placeholder: "Leave a comment...", class:"form-control", id: "edit_comment_area" %> 
+                          placeholder: t('questions.show.leave_comment'), class:"form-control", id: "edit_comment_area" %> 
         <% end %>
       <% end %>       
 
     <%= hidden_field_tag :answer_id, answer&.id %>
-    <%= f.submit reply.new_record? ? "Enter" : "Update", class:"btn btn-outline-primary" %>
+    <%= f.submit reply.new_record? ? t('global.button.enter') : t('global.button.update'),
+                 class:"btn btn-outline-primary" %>
   </div>
 <% end %>
