--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -11,10 +11,11 @@
       <div class="card-body">
         <h5 class="card-title"><%= question.title %></h5>
         <p class="card-text"><%= question.body %></p>
-        <%= link_to 'Show', question_path(question), class:"btn btn-outline-primary" %>
+        <%= link_to t('global.button.show'), question_path(question), class:"btn btn-outline-primary" %>
         <% if owner?(question) %>
-          <%= link_to 'Edit', edit_question_path(question), class:"btn btn-outline-primary" %>
-          <%= link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %>
+          <%= link_to t('global.button.edit'), edit_question_path(question), class:"btn btn-outline-primary" %>
+          <%= link_to t('global.button.delete'), question_path(question), method: :delete,
+                      data: { confirm: t('global.dialog.you_sure') }, class:"btn btn-outline-danger" %>
         <% end %>
       </div>
 
